--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "get-stream": "^9.0.1",
     "nodemailer": "^7.0.10",
     "pdfkit": "^0.17.2"
   }
